--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="animate-in">
             <h2>Welcome to Dog Lovers Paradise</h2>
-            <img src="/api/placeholder/400/300" alt="Dog running in field" class="feature-img">
+            <img src="https://www.yourtango.com/sites/default/files/image_blog/cutest-dog-breeds-header.jpg" alt="Cute puppies" class="feature-img">
             <p>Dogs have been human companions for thousands of years. Known for their loyalty, intelligence, and affection, dogs hold a special place in our hearts and homes.</p>
             <p>On this site, you'll discover information about popular dog breeds, care tips, and interesting facts about our canine friends. Whether you're a current dog owner or considering adding a furry friend to your family, our goal is to provide helpful resources.</p>
             <p>Dogs are extraordinary creatures that come in countless shapes, sizes, and personalities. From the tiny Chihuahua to the massive Great Dane, there's a perfect dog for every lifestyle and preference.</p>
